[package]
name = "ferinth"
# The major version specifies which version of the Modrinth API this supports
version = "2.11.1"
edition = "2021"
authors = ["Ilesh Thiada (theRookieCoder) <ileshkt@gmail.com>", "4JX"]
description = "A simple Rust wrapper for the official Modrinth API"
repository = "https://github.com/gorilla-devs/ferinth"
license = "MIT"
publish = ["crates-io"]
keywords = ["modrinth", "minecraft", "modding"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
lazy-regex = "3.3"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
